--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14"
+    "react-scripts": "1.0.14",
+    "react-sortable-hoc": "^0.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
