--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-client/node_modules
-server/node_modules
+/node_modules
 
 # testing
 /coverage
 
 # production
-client/build
+/build
 
 # misc
 .DS_Store
