--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "private": true,
   "dependencies": {
     "bnpm": "^1.0.0",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "browser-router": "^0.2.0",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "http": "0.0.0",
     "install": "^0.10.1",
     "link": "^0.1.5",
+    "massive": "^4.5.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
@@ -15,7 +20,8 @@
     "switch": "0.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "nodemon server/index.js",
+    "start:dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
