--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "browser-router": "^0.2.0",
     "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "http": "0.0.0",
     "install": "^0.10.1",
