Restructure Node App

--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
     "bnpm": "^1.0.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0-beta.2",
     "browser-router": "^0.2.0",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "http": "0.0.0",
     "install": "^0.10.1",
     "link": "^0.1.5",
-    "massive": "^4.5.0",
+    "morgan": "^1.9.0",
+    "pg": "^7.4.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "sequelize": "^4.22.8",
     "switch": "0.0.0"
   },
   "scripts": {
